# ensmallen

./: .appveyor.yml  .travis.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  HISTORY.md  LICENSE.txt  README.md  UPDATING.txt  example.cpp
.github/ISSUE_TEMPLATE/: 0-bug.md
.github/workflows/: bandicoot-test.yml
CMake/: COOT_FindCLBLAS.cmake  COOT_FindCLBlast.cmake  COOT_FindNVRTC.cmake  FindArmadillo.cmake  FindBandicoot.cmake  ensmallen-config.cmake.in
doc/: README.md  callbacks.md  function_types.md  optimizers.md
doc/mlsys_paper/: nips_2018.sty  paper.bib  paper.tex
doc/mlsys_paper/experiments/: Makefile  README.txt  adagrad.txt  adam.txt  anneal.py  anneal_numba.py  learning_curves_crop.eps  linear_regression.cpp  linear_regression.jl  linear_regression.m  linear_regression.py  linear_regression_autodiff.jl  linear_regression_autograd.py  linear_regression_print.cpp  linear_regression_two_functions.cpp  linear_regression_with_gradient.jl  mex_rosenbrock.cpp  plot.py  rmsprop.txt  rosenbrock.cpp  rosenbrock.jl  rosenbrock.m  rosenbrock.py  rosenbrock_mex.m  rosenbrock_numba.py  run_linear_regression.sh  run_rosenbrock.sh  sgd.txt  smorms3.txt  spalera.txt
include/: ensmallen.hpp
include/ensmallen_bits/: config.hpp  ens_version.hpp  function.hpp  log.hpp
include/ensmallen_bits/ada_belief/: ada_belief.hpp  ada_belief_impl.hpp  ada_belief_update.hpp
include/ensmallen_bits/ada_bound/: ada_bound.hpp  ada_bound_impl.hpp  ada_bound_update.hpp  ams_bound_update.hpp
include/ensmallen_bits/ada_delta/: ada_delta.hpp  ada_delta_impl.hpp  ada_delta_update.hpp
include/ensmallen_bits/ada_grad/: ada_grad.hpp  ada_grad_impl.hpp  ada_grad_update.hpp
include/ensmallen_bits/ada_sqrt/: ada_sqrt.hpp  ada_sqrt_impl.hpp  ada_sqrt_update.hpp
include/ensmallen_bits/adam/: adam.hpp  adam_impl.hpp  adam_update.hpp  adamax_update.hpp  adamw_update.hpp  amsgrad_update.hpp  nadam_update.hpp  nadamax_update.hpp  optimisticadam_update.hpp  padam_update.hpp  qhadam_update.hpp  radam_update.hpp
include/ensmallen_bits/adamr/: adamr.hpp  adamr_impl.hpp
include/ensmallen_bits/adamw/: adamw.hpp  adamw_impl.hpp  adamw_update.hpp
include/ensmallen_bits/adamwr/: adamwr.hpp  adamwr_impl.hpp
include/ensmallen_bits/age_moea/: agemoea.hpp  agemoea_impl.hpp
include/ensmallen_bits/agemoea/: agemoea.hpp  agemoea_impl.hpp
include/ensmallen_bits/aug_lagrangian/: aug_lagrangian.cpp  aug_lagrangian.hpp  aug_lagrangian_function.hpp  aug_lagrangian_function_impl.hpp  aug_lagrangian_impl.hpp  aug_lagrangian_test_functions.hpp
include/ensmallen_bits/bigbatch_sgd/: adaptive_stepsize.hpp  backtracking_line_search.hpp  bigbatch_sgd.hpp  bigbatch_sgd_impl.hpp
include/ensmallen_bits/callbacks/: callbacks.hpp  early_stop_at_min_loss.hpp  early_stop_at_min_loss_on_validation.hpp  grad_clip_by_norm.hpp  grad_clip_by_value.hpp  print_loss.hpp  progress_bar.hpp  query_front.hpp  report.hpp  store_best_coordinates.hpp  timer_stop.hpp  traits.hpp
include/ensmallen_bits/cd/: cd.hpp  cd_impl.hpp
include/ensmallen_bits/cmaes/: .gitignore  active_cmaes.hpp  active_cmaes_impl.hpp  bipop_cmaes.hpp  bipop_cmaes_impl.hpp  cmaes.hpp  cmaes_impl.hpp  cmaparameters.hpp  count_function_evaluations.hpp  full_selection.hpp  ipop_cmaes.hpp  ipop_cmaes_impl.hpp  not_empty_transformation.hpp  pop_cmaes.hpp  pop_cmaes_impl.hpp  random_selection.hpp  sa_acmes.hpp  sa_acmes_impl.hpp  store_function_evaluations.hpp  test  test.cpp
include/ensmallen_bits/cne/: cne.hpp  cne_impl.hpp
include/ensmallen_bits/de/: de.hpp  de_impl.hpp
include/ensmallen_bits/demon_adam/: demon_adam.hpp  demon_adam_update.hpp
include/ensmallen_bits/demon_sgd/: demon_sgd.hpp  demon_sgd_update.hpp
include/ensmallen_bits/dsd/: dsd_impl.hpp
include/ensmallen_bits/eve/: eve.hpp  eve_impl.hpp
include/ensmallen_bits/sa/: sa.hpp  (+2 more)
rel/: ensmallen-release.sh
scripts/: ensmallen-release.sh  history-update-check.sh  update-website-after-release.sh
tests/: CMakeLists.txt  active_cmaes_test.cpp  ada_belief_test.cpp  ada_bound_test.cpp  ada_delta_test.cpp  ada_grad_test.cpp  ada_sqrt_test.cpp  adam_test.cpp  adamr_test.cpp  agemoea_test.cpp  aug_lagrangian_test.cpp  bigbatch_sgd_test.cpp  bipop_cmaes_test.cpp  callbacks_test.cpp  catch.hpp  cd_test.cpp  cmaes_test.cpp  cne_test.cpp  coot_test.cpp  de_test.cpp  delta_bar_delta_test.cpp  demon_adam_test.cpp  demon_sgd_test.cpp  eve_test.cpp  fasta_test.cpp  fbs_test.cpp  fista_test.cpp  frankwolfe_test.cpp  ftml_test.cpp  function_test.cpp  gradient_descent_test.cpp  grid_search_test.cpp  indicators_test.cpp  ipop_cmaes_test.cpp  iqn_test.cpp  katyusha_test.cpp  lbfgs_test.cpp  lbfgsb_test.cpp  line_search_test.cpp  lmcma_test.cpp  (+35 more)
tests/data/: bennett5.csv  boxBOD.csv  chwirut1.csv  chwirut2.csv  danWood.csv  eckerle4.csv  enso.csv  gauss1.csv  gauss2.csv  gauss3.csv  hahn1.csv  kirby2.csv  lanczos1.csv  lanczos2.csv  lanczos3.csv  madelon.csv  mgh09.csv  mgh10.csv  mgh17.csv  misra1a.csv  misra1b.csv  nelson.csv  rat42.csv  rat43.csv  roszman1.csv  thurber.csv  titanic.csv
tests_catch/: CMakeLists.txt  ada_delta_test.cpp  ada_grad_test.cpp  adam_test.cpp  aug_lagrangian_test.cpp  bigbatch_sgd_test.cpp  catch.hpp  cmaes_test.cpp  cne_test.cpp  cv_test.cpp  dummy.cpp  function_test.cpp  gradient_descent_test.cpp  katyusha_test.cpp  lbfgs_test.cpp  line_search_test.cpp  lrsdp_test.cpp  main.cpp  momentum_sgd_test.cpp  nesterov_momentum_sgd_test.cpp  parallel_sgd_test.cpp  proximal_test.cpp  rmsprop_test.cpp  sa_test.cpp  sarah_test.cpp  scd_test.cpp  sdp_primal_dual_test.cpp  sgd_test.cpp  sgdr_test.cpp  smorms3_test.cpp  snapshot_ensembles.cpp  spalera_sgd_test.cpp  svrg_test.cpp  test_function_tools.hpp
tests_old/: ada_delta_test.cpp  aug_lagrangian_test.cpp  cmaes_test.cpp  cne_test.cpp  cv_test.cpp  function_test.cpp  gradient_descent_test.cpp  katyusha_test.cpp  lrsdp_test.cpp  momentum_sgd_test.cpp  proximal_test.cpp  rmsprop_test.cpp  sarah_test.cpp  scd_test.cpp  sgd_test.cpp  smorms3_test.cpp  snapshot_ensembles.cpp  spalera_sgd_test.cpp  svrg_test.cpp
(+328 files in other folders)
